<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Event Manager</string>
    <string name="title_section1">Today\'s Events</string>
    <string name="title_section2">Weekly Events view</string>
    <string name="title_section3">Monthly Event View</string>
    <string name="title_section4">Add Event</string>
    <string name="title_section5">Events Accepted</string>
    <string name="title_section6">Events I might attend</string>
    <string name="title_section7">Events denied</string>
    <string name="title_section8">Facebook Auth.(retrieve contacts)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add">Create Events</string>
    <string name="action_search">Search Events</string>

    <string name="action_augmented_reality_today">Augmented Reality: Today\'s Events</string>
    <string name="action_augmented_reality_weekly">Augmented Reality: Weekly Events</string>
    <string name="action_augmented_reality_monthly">Augmented Reality: Monthly Event</string>

    <string name="action_settings">Settings</string>
    <string name="action_about_us">About Us</string>
    <string name="action_rate_app">Rate App</string>
    <string name="action_logout">Logout</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">closed</string>

    <string-array name="fragment_names">
        <item>Created Events</item>
        <item>Accepted Events</item>
        <item>Invited Events</item>
        <item>Declined Events</item>
        <item>All Events</item>
    </string-array>

    <string name="title_activity_create_event">Create Event</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook_app_id">799923176750576</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_display_event">DisplayEventActivity</string>
    <string name="intro_message">Please select people from  FB contacts or Phone book contacts.Showing 50 entries per page. Refine using Search Box(min 3 chars).</string>
    <string name="title_activity_contact_selector">ContactSelectorActivity</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
